Enable compiler optimisations for inference.exe.

--- a/Inference/Makefile
+++ b/Inference/Makefile
@@ -1,7 +1,7 @@
 all: inference generate distill ubertree
 
 inference:
-	gcc -Wall -g -lgsl -lgslcblas -lm main.c beliefprop.c matrix.c mcmc.c modellike.c saveresults.c tree.c sampman.c -o inference.exe
+	gcc -Wall -g -O3 -lgsl -lgslcblas -lm main.c beliefprop.c matrix.c mcmc.c modellike.c tree.c gslworkspace.c sampman.c -o inference.exe
 
 generate:
 	gcc -g -lgsl -lgslcblas -lm generate.c beliefprop.c matrix.c mcmc.c modellike.c tree.c -o generate.exe
