Got generate.exe working again by bringing it into line with all the new interfaces.  Kind of a hack job, but seems to work.

--- a/Inference/Makefile
+++ b/Inference/Makefile
@@ -4,7 +4,7 @@ inference:
 	gcc -Wall -g -O3 -lgsl -lgslcblas -lm main.c beliefprop.c matrix.c mcmc.c modellike.c tree.c gslworkspace.c sampman.c -o inference.exe
 
 generate:
-	gcc -g -lgsl -lgslcblas -lm generate.c beliefprop.c matrix.c mcmc.c modellike.c tree.c -o generate.exe
+	gcc -g -lgsl -lgslcblas -lm generate.c beliefprop.c matrix.c mcmc.c modellike.c tree.c gslworkspace.c -o generate.exe
 
 distill:
 	gcc -g -lgsl -lgslcblas -lm distiller.c beliefprop.c matrix.c mcmc.c modellike.c -o distill.exe
