Remove old distill and ubertree targets from Makefile.

--- a/Inference/Makefile
+++ b/Inference/Makefile
@@ -1,4 +1,4 @@
-all: inference generate distill ubertree
+all: inference generate 
 
 inference:
 	gcc -Wall -g -O3 -lgsl -lgslcblas -lm main.c beliefprop.c matrix.c mcmc.c modellike.c tree.c gslworkspace.c sampman.c ubertree.c -o inference.exe
